gh pages img fix

--- a/src/app/main/main-lists/main-lists.component.html
+++ b/src/app/main/main-lists/main-lists.component.html
@@ -4,7 +4,7 @@
     </div>
     <ng-template #lackOfLists>
         <div class="lack">
-            <img class="lack__image" src="../../../assets/images/asset.png"/>
+            <img class="lack__image" src="./assets/images/asset.png"/>
             <p class="lack__text">Create your first list. Make your shopping faster and more convenient.</p>
             <app-button (click)="openingModal()" [label]="'Create a list'"></app-button>
         </div>
